# AutoCheck

./: CMakeLists.txt  README.md
Benchmarks/checkpoint/BT/src/: Makefile  bt.c  npbparams.h
Benchmarks/checkpoint/CG/src/: Makefile  cg.c  npbparams.h
Benchmarks/checkpoint/EP/src/: Makefile  ep.c  npbparams.h
Benchmarks/checkpoint/FT/: CMakeLists.txt
Benchmarks/checkpoint/FT/src/: Makefile  appft.c  mainft.c  npbparams.h
Benchmarks/checkpoint/HPCCG/: CMakeLists.txt
Benchmarks/checkpoint/Himeno/: CMakeLists.txt
Benchmarks/checkpoint/Himeno/src/: himenoBMT.c
Benchmarks/checkpoint/IS/src/: Makefile  is.c  npbparams.h
Benchmarks/checkpoint/LU/src/: Makefile  lu.c  npbparams.h  ssor.c
Benchmarks/checkpoint/MG/src/: Makefile  mg.c  npbparams.h
Benchmarks/checkpoint/SP/src/: Makefile  npbparams.h  sp.c
Benchmarks/checkpoint/himeno/src/: himenoBMT.c
Benchmarks/fti/Himeno/: Himeno  Makefile  config.L1.fti  config.fti  fti.sh  himenoBMT.c
Benchmarks/fti/NPB3.3-SER-C/: Makefile
Benchmarks/fti/NPB3.3-SER-C/CG/: Makefile  cg  cg.c  config.L1.fti  config.fti  fti.sh  npbparams.h
Benchmarks/fti/NPB3.3-SER-C/config/: make.def
Benchmarks/fti/NPB3.3-SER-C/sys/: setparams
Benchmarks/libcheckpoint/: checkpoint.c  checkpoint.h
Benchmarks/varify/Himeno/: himenoBMT.c
Script/: auto.sh  process.py  run.sh
src/: dependecy_info.cpp  dependecy_info.h  get_info.cpp  get_info.h  instr_info.cpp  instr_info.h  main.cpp  variable_match.cpp  variable_match.h
